--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,16 +2,11 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Download and Run hello.py",
+            "name": "Download and Run",
             "type": "ev3devBrowser",
             "request": "launch",
-            "program": "/home/robot/${workspaceFolderBasename}/hello.py"
-        },
-        {
-            "name": "Download and Run Current File",
-            "type": "ev3devBrowser",
-            "request": "launch",
-            "program": "/home/robot/${workspaceFolderBasename}/${relativeFile}"
+            "program": "/home/robot/${workspaceRootFolderName}/${relativeFile}"
         }
+        
     ]
 }
