--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,4 @@
 {
     "files.eol": "\n",
-    "ev3devBrowser.download.exclude": "{**/.*,LICENSE,README.md}",
-    "terminal.integrated.shell.windows": "cmd.exe"
+    "ev3devBrowser.download.exclude": "{**/.*,LICENSE,README.md}"
 }
